changed tests to JDK 19 compatibility